--- a/app/src/main/res/drawable/layout_round_shape.xml
+++ b/app/src/main/res/drawable/layout_round_shape.xml
@@ -4,15 +4,15 @@
         android:top="2dp"
         android:bottom="2dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/white"/>
+            <solid android:color="@color/Theme_Color"/>
         <corners
-            android:bottomRightRadius="15dp"
-            android:bottomLeftRadius="15dp"
-            android:topLeftRadius="15dp"
-            android:topRightRadius="15dp"/>
+            android:bottomRightRadius="5dp"
+            android:bottomLeftRadius="5dp"
+            android:topLeftRadius="5dp"
+            android:topRightRadius="5dp"/>
         <stroke
             android:width="1dp"
-            android:color="#CCCCCC" />
+            android:color="@color/Theme_Less_Accent_Color" />
     </shape>
     </item>
 </layer-list>
