--- a/app/src/main/res/drawable/my_chat_background.xml
+++ b/app/src/main/res/drawable/my_chat_background.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <solid android:color="#ffffff"/>
-    <stroke android:color="@color/Transparent_Green" android:width="1dp"/>
+    <stroke android:color="@color/Sub_Tutle_Color" android:width="1dp"/>
     <corners android:radius="4dp"/>
 
 </shape>
