--- a/app/src/main/res/drawable/other_chat_background.xml
+++ b/app/src/main/res/drawable/other_chat_background.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <solid android:color="#ffffff"/>
-    <stroke android:color="@color/purple_200" android:width="1dp"/>
+    <stroke android:color="@color/dark_mint" android:width="1dp"/>
     <corners android:radius="4dp"/>
 
 </shape>
