--- a/app/src/main/res/drawable/round_shape.xml
+++ b/app/src/main/res/drawable/round_shape.xml
@@ -7,7 +7,7 @@
         android:bottomLeftRadius="15dp"
         android:bottomRightRadius="15dp"/>
     <stroke
-        android:width="1dp"
-        android:color="@color/Transparent_Green">
+        android:width="2dp"
+        android:color="@color/Theme_Less_Accent_Color">
     </stroke>
 </shape>
