--- a/app/src/main/res/drawable/state_friend_btn_shape.xml
+++ b/app/src/main/res/drawable/state_friend_btn_shape.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@android:color/transparent"/>
+    <solid android:color="@color/P2P_Chat_Room_Color"/>
+
     <corners
-        android:topLeftRadius="5dp"
-        android:topRightRadius="5dp"
-        android:bottomLeftRadius="5dp"
-        android:bottomRightRadius="5dp"/>
+        android:topLeftRadius="7dp"
+        android:topRightRadius="7dp"
+        android:bottomLeftRadius="7dp"
+        android:bottomRightRadius="7dp"/>
     <stroke
         android:width="2dp"
         android:color="@color/State_Msg_Color_Background">
