--- a/app/src/main/res/drawable/under_edge_2dp.xml
+++ b/app/src/main/res/drawable/under_edge_2dp.xml
@@ -8,7 +8,7 @@
         <shape android:shape="rectangle">
             <stroke
                 android:width="2dp"
-                android:color="@color/Theme_Less_Accent_Color">
+                android:color="@color/Theme_Text_Color">
             </stroke>
             <solid android:color="@android:color/transparent"></solid>
         </shape>
