--- a/app/src/main/res/drawable/user_state_msg_background.xml
+++ b/app/src/main/res/drawable/user_state_msg_background.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@android:color/transparent"/>
+    <solid android:color="@color/Theme_Color"/>
     <corners
         android:topLeftRadius="5dp"
         android:topRightRadius="5dp"
         android:bottomLeftRadius="5dp"
         android:bottomRightRadius="5dp"/>
     <stroke
-        android:width="2dp"
-        android:color="@color/State_Msg_Color_Background">
+        android:width="1dp"
+        android:color="@color/Theme_Less_Accent_Color">
     </stroke>
 </shape>
