--- a/app/src/main/res/layout/activity_chatting.xml
+++ b/app/src/main/res/layout/activity_chatting.xml
@@ -18,8 +18,11 @@
             android:id="@+id/Post_View_Content_Container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/Chat_ET_Color"
-            android:padding="6dp"
+            android:background="@color/Chat_Room_Color"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -55,12 +58,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <androidx.recyclerview.widget.RecyclerView
-            android:padding="5dp"
-            android:descendantFocusability="blocksDescendants"
             android:id="@+id/Chatting_List_ListView"
+            android:padding="6dp"
+            android:descendantFocusability="blocksDescendants"
             android:background="@android:color/transparent"
-            android:layout_marginRight="5dp"
-            android:layout_marginLeft="5dp"
+            android:layout_marginRight="6dp"
+            android:layout_marginLeft="6dp"
             android:divider="@color/white"
             android:layout_above="@id/Replided_Edit_Container"
             android:layout_width="match_parent"
@@ -116,8 +119,8 @@
         </RelativeLayout>
     </RelativeLayout>
     <RelativeLayout
-        android:background="@color/Chat_ET_Color"
         android:id="@+id/Chatting_Edittext_Container"
+        android:background="@color/Chat_ET_Color"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="6dp"
@@ -163,6 +166,7 @@
                 android:background="@null"
                 android:textColor="@color/Theme_Text_Color"
                 android:textSize="14dp"
+                android:textColorHint="@color/Theme_Less_Accent_Color"
                 android:fontFamily="@font/notosans_regular"
                 android:includeFontPadding="false"
                 android:layout_centerInParent="true"
