--- a/app/src/main/res/layout/activity_p2p_chatting.xml
+++ b/app/src/main/res/layout/activity_p2p_chatting.xml
@@ -10,37 +10,43 @@
     </data>
     <LinearLayout
         tools:context="com.bigjeon.grumbling.P2P_Chatting_Activity"
-        android:background="@drawable/selected__post_view_activity_background_img"
+        android:background="@color/Theme_Color"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <RelativeLayout
-            android:layout_weight="12"
-            android:background="@color/Transparent_Black30"
             android:id="@+id/Post_View_Content_Container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/P2P_Chat_Room_Color"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
             <ImageView
                 android:id="@+id/BackPress_Btn"
+                android:backgroundTint="@color/Theme_Text_Color"
                 android:background="@drawable/ic_baseline_navigate_before_24"
                 android:layout_centerInParent="true"
                 android:layout_alignParentLeft="true"
-                android:layout_marginLeft="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
             </ImageView>
             <TextView
                 android:id="@+id/Chatting_Post_Content_TV"
                 android:text="User_Name"
-                android:textSize="15dp"
+                android:textSize="18dp"
                 android:layout_toRightOf="@id/BackPress_Btn"
-                android:textColor="@color/black"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:textColor="@color/Theme_Text_Color"
                 android:gravity="left"
-                android:textStyle="bold"
-                android:layout_marginLeft="10dp"
+                android:includeFontPadding="false"
+                android:fontFamily="@font/notosans_medium"
+                android:layout_marginLeft="6dp"
                 android:layout_centerInParent="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -48,39 +54,44 @@
         </RelativeLayout>
         <RelativeLayout
             android:layout_weight="2"
+            android:background="@color/P2P_Chat_Room_Color"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <androidx.recyclerview.widget.RecyclerView
-                android:descendantFocusability="blocksDescendants"
-                android:padding="5dp"
                 android:id="@+id/Chatting_List_ListView"
+                android:padding="6dp"
+                android:descendantFocusability="blocksDescendants"
                 android:background="@android:color/transparent"
-                android:layout_marginRight="5dp"
-                android:layout_marginLeft="5dp"
+                android:layout_marginRight="6dp"
+                android:layout_marginLeft="6dp"
                 android:divider="@color/white"
-                android:layout_alignParentTop="true"
-                android:layout_width="match_parent"
                 android:layout_above="@id/Replided_Edit_Container"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent">
             </androidx.recyclerview.widget.RecyclerView>
             <RelativeLayout
                 android:id="@+id/Replided_Edit_Container"
                 android:visibility="gone"
-                android:background="@color/Transparent_Black30"
+                android:background="@color/Theme_Color"
                 android:layout_alignParentBottom="true"
                 android:layout_width="match_parent"
-                android:layout_height="100dp">
+                android:layout_height="70dp">
                 <RelativeLayout
                     android:id="@+id/Replide_Target_Name_Container"
                     android:background="@drawable/post_view_title_under_edge_1dp"
-                    android:layout_margin="5dp"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginRight="6dp"
+                    android:paddingTop="2dp"
+                    android:gravity="center_vertical"
                     android:layout_width="match_parent"
                     android:layout_height="30dp">
                     <TextView
                         android:id="@+id/Replied_Target_Name"
-                        android:textSize="15dp"
+                        android:textSize="14dp"
                         android:hint="이름"
-                        android:textColor="@color/black"
+                        android:fontFamily="@font/notosans_regular"
+                        android:includeFontPadding="false"
+                        android:textColor="@color/Theme_Text_Color"
                         android:layout_centerInParent="true"
                         android:layout_alignParentLeft="true"
                         android:layout_width="wrap_content"
@@ -88,14 +99,19 @@
                     </TextView>
                 </RelativeLayout>
                 <RelativeLayout
-                    android:layout_margin="5dp"
+                    android:layout_margin="6dp"
                     android:layout_below="@id/Replide_Target_Name_Container"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
                     <TextView
                         android:id="@+id/Replied_Text"
+                        android:fontFamily="@font/notosans_regular"
+                        android:textSize="12dp"
+                        android:includeFontPadding="false"
+                        android:layout_centerInParent="true"
+                        android:gravity="center_vertical"
+                        android:textColor="@color/Theme_Less_Accent_Color"
                         android:text="답장 대상 내용"
-                        android:textColor="@color/black"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
                     </TextView>
@@ -103,53 +119,61 @@
             </RelativeLayout>
         </RelativeLayout>
         <RelativeLayout
-            android:background="@color/Transparent_Black30"
-            android:layout_weight="11.5"
             android:id="@+id/Chatting_Edittext_Container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:background="@color/Chat_ET_Color"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="6dp"
+            android:paddingBottom="6dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
+
             <RelativeLayout
-                android:layout_margin="5dp"
+                android:paddingLeft="6dp"
+                android:paddingRight="6dp"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
+
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/Chatting_Send_CIV"
-                    android:layout_centerInParent="true"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
                     android:layout_alignParentRight="true"
-                    android:src="@drawable/ic_baseline_send_24"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp">
-                </de.hdodenhof.circleimageview.CircleImageView>
+                    android:layout_centerInParent="true"
+                    android:background="@drawable/ic_baseline_send_24"
+                    android:backgroundTint="@color/Theme_Text_Color"></de.hdodenhof.circleimageview.CircleImageView>
 
                 <ImageView
                     android:id="@+id/Reply_Img"
-                    android:visibility="gone"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
                     android:layout_alignParentLeft="true"
-                    android:background="@drawable/ic_baseline_reply_24"
-                    android:rotationX="180"
-                    android:rotationY="180"></ImageView>
-                <EditText
-                    android:layout_toRightOf="@id/Reply_Img"
-                    android:background="@drawable/round_shape_off"
-                    android:paddingLeft="5dp"
-                    android:id="@+id/Chatting_ETV"
-                    android:layout_toLeftOf="@id/Chatting_Send_CIV"
-                    android:hint="내용을 입력하세요."
-                    android:layout_marginRight="5dp"
-                    android:layout_marginLeft="5dp"
-                    android:textColor="@color/black"
-                    android:textSize="13dp"
                     android:layout_centerInParent="true"
-                    android:gravity="center_vertical"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/ic_baseline_reply_24"
+                    android:backgroundTint="@color/Theme_Text_Color"
+                    android:rotationX="180"
+                    android:rotationY="180"
+                    android:visibility="gone"></ImageView>
+
+                <EditText
+                    android:id="@+id/Chatting_ETV"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp">
-                </EditText>
+                    android:layout_height="40dp"
+                    android:layout_centerInParent="true"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="6dp"
+                    android:layout_toLeftOf="@id/Chatting_Send_CIV"
+                    android:layout_toRightOf="@id/Reply_Img"
+                    android:background="@null"
+                    android:fontFamily="@font/notosans_regular"
+                    android:hint="내용을 입력하세요."
+                    android:includeFontPadding="false"
+                    android:textColor="@color/Theme_Text_Color"
+                    android:textColorHint="@color/Theme_Less_Accent_Color"
+                    android:textSize="14dp"></EditText>
             </RelativeLayout>
         </RelativeLayout>
     </LinearLayout>
