--- a/app/src/main/res/layout/activity_show_selected_post.xml
+++ b/app/src/main/res/layout/activity_show_selected_post.xml
@@ -12,13 +12,13 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/none_effect_background_img"
+    android:background="@color/Theme_Color"
     tools:context="com.bigjeon.grumbling.Show_Selected_Post_Activity">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/Selected_Post_Toolbar"
         android:background="@android:color/transparent"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="60dp"
         app:contentInsetStart="0dp"
         app:layout_constraintTop_toTopOf="parent">
         <RelativeLayout
@@ -29,14 +29,14 @@
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_alignParentLeft="true"
                 android:id="@+id/Selected_Post_User_Img"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_centerInParent="true"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="5dp"
-                android:src="@mipmap/ic_launcher"
-                app:civ_border_color="@color/Transparent_light_Green"
-                app:civ_border_width="1dp">
+                android:src="@drawable/default_profile_img"
+                app:civ_border_color="@color/Theme_Text_Color"
+                app:civ_border_width="0.5dp">
             </de.hdodenhof.circleimageview.CircleImageView>
             <TextView
                 android:id="@+id/Selected_Post_User_Name"
@@ -45,11 +45,13 @@
                 android:layout_centerInParent="true"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="15dp"
+                android:gravity="center_vertical"
                 android:layout_toRightOf="@+id/Selected_Post_User_Img"
                 android:text="User_Name"
-                android:textColor="@color/black"
-                android:textSize="12dp"
-                android:textStyle="bold">
+                android:fontFamily="@font/notosans_medium"
+                android:includeFontPadding="false"
+                android:textColor="@color/Theme_Text_Color"
+                android:textSize="14dp">
             </TextView>
         </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
@@ -64,20 +66,18 @@
         <RelativeLayout
             android:id="@+id/Selected_Post_Content_Container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/Transparent_Black90">
+            android:layout_height="match_parent">
             <FrameLayout
                 android:id="@+id/Show_Selected_Post_FrameLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_above="@id/Selected_Post_Bottom_Container"
-                android:backgroundTint="@android:color/transparent">
+                android:layout_above="@id/Selected_Post_Bottom_Container">
                 <ImageView
                     android:id="@+id/Selected_Post_Background"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@android:color/transparent"
-                    android:scaleType="fitCenter">
+                    android:background="@color/white"
+                    android:scaleType="centerCrop">
                 </ImageView>
             </FrameLayout>
 
@@ -85,48 +85,52 @@
                 android:id="@+id/Selected_Post_Content"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/notosans_regular"
+                android:textSize="14dp"
+                android:includeFontPadding="false"
+                android:textColor="@color/Theme_Text_Color"
                 android:layout_centerInParent="true"
-                android:background="#50000000"
+                android:background="@color/Transparent_Black30"
                 android:text="나는 가끔 눈물을 흘린다.">
             </TextView>
 
             <RelativeLayout
                 android:id="@+id/Selected_Post_Bottom_Container"
                 android:layout_width="match_parent"
-                android:layout_height="35dp"
+                android:layout_height="45dp"
                 android:layout_alignParentBottom="true"
-                android:background="@drawable/none_effect_background_img">
+                android:background="@drawable/post_view_title_under_edge_1dp">
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/Selected_Post_Enter_Chatting_CIV"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_marginRight="5dp"
-                    android:padding="3dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginRight="6dp"
                     android:layout_centerInParent="true"
                     android:layout_alignParentRight="true"
-                    android:backgroundTint="@color/black"
+                    android:backgroundTint="@color/Theme_Text_Color"
                     android:background="@drawable/ic_baseline_question_answer_24">
                 </de.hdodenhof.circleimageview.CircleImageView>
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/Selected_Post_Favorite_Circle_CIV"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_centerInParent="true"
                     android:layout_toLeftOf="@id/Selected_Post_Favorite_Count_TV"
-                    android:backgroundTint="@color/Transparent_Black90"
+                    android:backgroundTint="@color/Theme_Text_Color"
                     android:background="@drawable/ic_baseline_favorite_border_24"></de.hdodenhof.circleimageview.CircleImageView>
                 <TextView
                     android:id="@+id/Selected_Post_Favorite_Count_TV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/Transparent_Black90"
+                    android:textColor="@color/Theme_Text_Color"
+                    android:fontFamily="@font/notosans_regular"
+                    android:textSize="12dp"
+                    android:includeFontPadding="false"
                     android:layout_toLeftOf="@+id/Selected_Post_Enter_Chatting_CIV"
                     android:layout_centerInParent="true"
-                    android:layout_marginRight="3dp"
-                    android:text="000"
-                    android:textStyle="bold"
-                    android:textSize="10dp">
+                    android:layout_marginRight="6dp"
+                    android:text="000">
                 </TextView>
                 <TextView
                     android:id="@+id/Show_Selected_Post_Whrite_Date_Tv"
@@ -147,18 +151,19 @@
         android:id="@+id/Show_Selected_Post_Chat_Container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:paddingTop="5dp"
+        android:paddingTop="6dp"
         android:layout_below="@id/Linearlayout"
         android:layout_alignParentBottom="true"
         android:visibility="visible"
-        android:background="@drawable/none_effect_background_img">
+        android:background="@color/Theme_Color">
         <TextView
             android:id="@+id/Show_Selected_Post_None_Chat_TV"
-            android:visibility="visible"
-            android:textSize="15dp"
-            android:textColor="@color/Transparent_Black30"
-            android:textStyle="bold"
-            android:text="현재 등록된 채팅이 없습니다.\n 자유롭게 채팅에 참여해보세요!"
+            android:visibility="gone"
+            android:textSize="16dp"
+            android:fontFamily="@font/notosans_regular"
+            android:includeFontPadding="false"
+            android:textColor="@color/Theme_Less_Accent_Color"
+            android:text="현재 등록된 채팅이 없습니다."
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
