--- a/app/src/main/res/layout/db_gif_img_item.xml
+++ b/app/src/main/res/layout/db_gif_img_item.xml
@@ -1,24 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_margin="5dp"
-    android:layout_marginRight="5dp"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="6dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/Gif_Circle_IMV"
-        android:layout_width="50dp"
-        android:layout_height="50dp">
+        app:civ_border_color="@color/Theme_Less_Accent_Color"
+        app:civ_border_width="0.5dp"
+        android:layout_width="65dp"
+        android:layout_height="65dp">
     </de.hdodenhof.circleimageview.CircleImageView>
 
     <TextView
         android:id="@+id/Gif_Name_TV"
         android:text="gif이름"
+        android:fontFamily="@font/notosans_regular"
+        android:includeFontPadding="false"
+        android:textColor="@color/Theme_Text_Color"
         android:textSize="10dp"
+        android:textStyle="bold"
         android:gravity="center"
+        android:layout_centerInParent="true"
         android:layout_below="@id/Gif_Circle_IMV"
-        android:layout_width="50dp"
-        android:layout_height="20dp">
+        android:layout_width="wrap_content"
+        android:layout_height="25dp">
     </TextView>
+
 </RelativeLayout>
