--- a/app/src/main/res/layout/fragment_set__post__background.xml
+++ b/app/src/main/res/layout/fragment_set__post__background.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="200dp"
     android:background="@android:color/transparent"
     tools:context="com.bigjeon.grumbling.fragments.Set_Post_Background_Fragment">
     <RelativeLayout
@@ -10,24 +10,40 @@
         android:layout_below="@id/Dialog_Posting_Set_Text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp">
-        <de.hdodenhof.circleimageview.CircleImageView
+        android:padding="6dp">
+
+        <TextView
+            android:id="@+id/TV1"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:fontFamily="@font/notosans_medium"
+            android:includeFontPadding="false"
+            android:text="배경 이미지 설정"
+            android:textStyle="bold"
+            android:textColor="@color/Theme_Text_Color"
+            android:textSize="10dp"></TextView>
+        <Button
             android:id="@+id/Dialog_Posting_Background_Gallery"
-            android:background="@drawable/ic_baseline_insert_photo_24"
-            android:layout_alignParentRight="true"
+            android:text="갤러리에서 사진 가져오기 ..."
+            android:fontFamily="@font/notosans_medium"
+            android:textSize="12dp"
+            android:includeFontPadding="false"
+            android:background="@drawable/transparent_round_shape"
+            android:layout_marginTop="24dp"
+            android:layout_below="@id/Dialog_Posting_Background_DB_Rcv"
             android:layout_centerInParent="true"
-            android:layout_marginRight="5dp"
-            android:layout_width="50dp"
-            android:layout_height="50dp">
-        </de.hdodenhof.circleimageview.CircleImageView>
+            android:textColor="@color/Theme_Text_Color"
+            android:layout_width="match_parent"
+            android:layout_height="36dp">
+        </Button>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/Dialog_Posting_Background_DB_Rcv"
             android:layout_centerInParent="true"
             tools:listitem="@layout/db_gif_img_item"
-            android:layout_toLeftOf="@+id/Dialog_Posting_Background_Gallery"
+            android:layout_below="@id/TV1"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_marginRight="10dp">
+            android:layout_height="90dp"
+            android:layout_marginTop="6dp">
         </androidx.recyclerview.widget.RecyclerView>
     </RelativeLayout>
 </FrameLayout>
