--- a/app/src/main/res/layout/fragment_set__post__text.xml
+++ b/app/src/main/res/layout/fragment_set__post__text.xml
@@ -2,82 +2,107 @@
     xmlns:tools="http://schemas.android.com/tools">
 <FrameLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="220dp"
     android:background="@android:color/transparent"
     tools:context="com.bigjeon.grumbling.fragments.Set_Post_Text_Fragment">
     <RelativeLayout
+        android:padding="6dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/TV1"
+            android:text="텍스트 설정"
+            android:fontFamily="@font/notosans_medium"
+            android:textSize="10dp"
+            android:textStyle="bold"
+            android:textColor="@color/Theme_Text_Color"
+            android:includeFontPadding="false"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp">
+        </TextView>
         <RelativeLayout
             android:id="@+id/SeekBar_Con"
+            android:layout_marginTop="6dp"
             android:gravity="center"
-            android:padding="2dp"
+            android:layout_below="@id/TV1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="40dp">
             <TextView
                 android:id="@+id/Dialog_Posting_Content_Text_Size"
-                android:textColor="@color/black"
-                android:text="글자 크기"
-                android:layout_marginLeft="10dp"
+                android:textColor="@color/Theme_Text_Color"
+                android:text="크기"
+                android:layout_centerInParent="true"
+                android:layout_alignParentLeft="true"
+                android:fontFamily="@font/notosans_medium"
+                android:includeFontPadding="false"
+                android:textSize="12dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
             </TextView>
             <SeekBar
                 android:id="@+id/Dialog_Posting_Content_Text_Size_SeekBar"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginRight="6dp"
+                android:layout_marginLeft="6dp"
                 android:max="60"
                 android:min="30"
                 android:progress="45"
                 android:layout_toRightOf="@id/Dialog_Posting_Content_Text_Size"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="50dp">
             </SeekBar>
         </RelativeLayout>
         <RelativeLayout
             android:id="@+id/Text_Color_Con"
             android:layout_below="@id/SeekBar_Con"
             android:layout_width="match_parent"
-            android:layout_height="50dp">
+            android:layout_height="80dp">
             <TextView
                 android:id="@+id/Dialog_Posting_Content_Text_Color"
-                android:text="글자 색상"
-                android:textColor="@color/black"
-                android:gravity="center"
-                android:layout_marginLeft="10dp"
+                android:textColor="@color/Theme_Text_Color"
+                android:text="색상"
+                android:layout_centerInParent="true"
+                android:layout_alignParentLeft="true"
+                android:fontFamily="@font/notosans_medium"
+                android:includeFontPadding="false"
+                android:textSize="12dp"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
             </TextView>
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/Dialog_Posting_Content_Text_Color_Rcv"
                 android:layout_toRightOf="@+id/Dialog_Posting_Content_Text_Color"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginRight="20dp"
-                android:layout_marginLeft="20dp"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_marginLeft="6dp"
+                android:layout_marginRight="6dp"
                 tools:listitem="@layout/color_item">
             </androidx.recyclerview.widget.RecyclerView>
         </RelativeLayout>
         <RelativeLayout
             android:layout_below="@id/Text_Color_Con"
             android:layout_width="match_parent"
-            android:layout_height="50dp">
+            android:layout_height="80dp">
             <TextView
                 android:id="@+id/Dialog_Posting_Content_Text_BackColor"
-                android:text="배경 색상"
-                android:textColor="@color/black"
-                android:gravity="center"
-                android:layout_marginLeft="10dp"
+                android:textColor="@color/Theme_Text_Color"
+                android:text="배경"
+                android:layout_centerInParent="true"
+                android:layout_alignParentLeft="true"
+                android:fontFamily="@font/notosans_medium"
+                android:includeFontPadding="false"
+                android:textSize="12dp"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
             </TextView>
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/Dialog_Posting_Content_Text_BackColor_Rcv"
                 android:layout_toRightOf="@+id/Dialog_Posting_Content_Text_BackColor"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginRight="20dp"
-                android:layout_marginLeft="20dp"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_marginLeft="6dp"
+                android:layout_marginRight="6dp"
                 tools:listitem="@layout/color_item">
             </androidx.recyclerview.widget.RecyclerView>
         </RelativeLayout>
