--- a/app/src/main/res/layout/notification_item.xml
+++ b/app/src/main/res/layout/notification_item.xml
@@ -14,21 +14,20 @@
         android:src="@mipmap/ic_launcher"
         android:layout_centerInParent="true"
         android:layout_alignParentLeft="true"
-        app:civ_border_width="1dp"
-        app:civ_border_color="@color/Transparent_Black70"
+        app:civ_border_width="0.5dp"
+        app:civ_border_color="@color/Theme_Text_Color"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="5dp">
+        android:layout_marginTop="6dp">
     </de.hdodenhof.circleimageview.CircleImageView>
     <TextView
         android:id="@+id/Notification_User_Name"
         android:text="User_Name님이 친구추가 하였습니다."
-        android:textSize="10dp"
+        android:textSize="14dp"
         android:textStyle="bold"
         android:textColor="@color/black"
         android:layout_toRightOf="@+id/Notification_User_Img"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="6dp"
         android:layout_marginLeft="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
@@ -45,14 +44,14 @@
         android:layout_centerInParent="true"
         android:background="@drawable/round_shape_off"
         android:layout_width="wrap_content"
-        android:layout_height="40dp">
+        android:layout_height="wrap_content">
     </Button>
     <TextView
         android:id="@+id/Notification_Send_Date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="10dp"
-        android:textSize="7dp"
+        android:textSize="10dp"
         android:text="send_Date"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="5dp"
