--- a/app/src/main/res/layout/other_chatting_item.xml
+++ b/app/src/main/res/layout/other_chatting_item.xml
@@ -22,11 +22,10 @@
 
     <TextView
         android:id="@+id/Chatting_User_Name_TV"
-        android:textSize="10dp"
+        android:textSize="12dp"
         android:text="유저 이름"
         android:includeFontPadding="false"
-        android:fontFamily="@font/notosans_regular"
-        android:textStyle="bold"
+        android:fontFamily="@font/notosans_medium"
         android:layout_marginLeft="4dp"
         android:layout_toRightOf="@+id/Chatting_User_Img_CIV"
         android:textColor="@color/Theme_Text_Color"
@@ -37,21 +36,19 @@
         android:id="@+id/Chatting_Text_Container"
         android:layout_toRightOf="@+id/Chatting_User_Img_CIV"
         android:layout_below="@id/Chatting_User_Name_TV"
-        android:padding="5dp"
+        android:padding="4dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/Chatting_Text_TV"
             android:background="@drawable/other_chat_background"
             android:gravity="left"
-            android:padding="10dp"
+            android:padding="8dp"
             android:includeFontPadding="false"
-            android:fontFamily="@font/notosans_regular"
+            android:fontFamily="@font/notosans_medium"
             android:text="내용입력창입니다."
             android:textColor="@color/black"
-            android:textSize="12dp"
-            android:textStyle="bold"
-            android:layout_marginBottom="5dp"
+            android:textSize="14dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
         </TextView>
