--- a/app/src/main/res/layout/other_chatting_reply.xml
+++ b/app/src/main/res/layout/other_chatting_reply.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="200dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -21,13 +21,12 @@
 
             <TextView
                 android:id="@+id/Chatting_User_Name_TV"
-                android:textSize="10dp"
+                android:textSize="12dp"
                 android:text="유저 이름"
                 android:includeFontPadding="false"
-                android:fontFamily="@font/notosans_regular"
+                android:fontFamily="@font/notosans_medium"
                 android:layout_marginLeft="6dp"
-                android:textStyle="bold"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="2dp"
                 android:layout_toRightOf="@+id/Chatting_User_Img_CIV"
                 android:textColor="@color/Theme_Text_Color"
                 android:layout_width="wrap_content"
@@ -35,14 +34,14 @@
             </TextView>
             <RelativeLayout
                 android:id="@+id/Chatting_Text_Container"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="8dp"
                 android:background="@drawable/other_chat_background"
                 android:layout_toRightOf="@+id/Chatting_User_Img_CIV"
                 android:layout_below="@id/Chatting_User_Name_TV"
                 android:layout_marginBottom="5dp"
-                android:padding="5dp"
+                android:padding="8dp"
                 android:layout_marginLeft="6dp"
-                android:layout_width="wrap_content"
+                android:layout_width="220dp"
                 android:layout_height="wrap_content">
                 <RelativeLayout
                     android:id="@+id/Reply_Containier"
@@ -52,12 +51,13 @@
                     <TextView
                         android:id="@+id/Replied_Name"
                         android:text="uid"
-                        android:textColor="@color/black"
+                        android:padding="2dp"
+                        android:textColor="@color/Transparent_Black90"
                         android:textSize="10dp"
                         android:gravity="left"
                         android:includeFontPadding="false"
-                        android:fontFamily="@font/notosans_regular"
-                        android:background="@drawable/post_view_title_under_edge_1dp"
+                        android:fontFamily="@font/notosans_medium"
+                        android:background="@drawable/chat_reply_under_edge_1dp"
                         android:layout_alignParentTop="true"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
@@ -65,13 +65,13 @@
                     <TextView
                         android:id="@+id/Replied_Chat_TV"
                         android:layout_alignParentLeft="true"
-                        android:textSize="10dp"
+                        android:textSize="12dp"
                         android:textColor="@color/Transparent_Black80"
                         android:layout_centerInParent="true"
                         android:layout_below="@+id/Replied_Name"
                         android:text="답장칸"
                         android:includeFontPadding="false"
-                        android:fontFamily="@font/notosans_regular"
+                        android:fontFamily="@font/notosans_medium"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
                     </TextView>
@@ -80,13 +80,13 @@
                     android:id="@+id/Chatting_Text_TV"
                     android:layout_below="@id/Reply_Containier"
                     android:gravity="left"
-                    android:padding="11dp"
-                    android:textStyle="bold"
+                    android:paddingTop="6dp"
+                    android:paddingBottom="6dp"
                     android:text="내용입력창입니다."
                     android:textColor="@color/black"
-                    android:textSize="10dp"
+                    android:textSize="14dp"
                     android:includeFontPadding="false"
-                    android:fontFamily="@font/notosans_regular"
+                    android:fontFamily="@font/notosans_medium"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
                 </TextView>
