--- a/app/src/main/res/layout/timepeed_friends_request_item.xml
+++ b/app/src/main/res/layout/timepeed_friends_request_item.xml
@@ -3,7 +3,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="50dp"
+    android:layout_height="45dp"
     android:layout_marginRight="6dp"
     android:layout_marginLeft="6dp"
     android:background="@android:color/transparent">
@@ -11,24 +11,28 @@
         android:id="@+id/Timepeed_Friends_User_CIV"
         android:layout_width="35dp"
         android:layout_height="35dp"
+        android:src="@drawable/default_profile_img"
         android:layout_centerInParent="true"
         android:layout_alignParentLeft="true"
-        app:civ_border_color="@color/Theme_Text_Color"
+        app:civ_border_color="@color/Sub_Tutle_Color"
         app:civ_border_width="0.5dp">
     </de.hdodenhof.circleimageview.CircleImageView>
+    <RelativeLayout
+        android:layout_marginLeft="6dp"
+        android:layout_toRightOf="@+id/Timepeed_Friends_User_CIV"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
     <TextView
         android:id="@+id/Timepeed_Friends_Text"
         android:textColor="@color/Theme_Text_Color"
         android:textSize="12dp"
         android:fontFamily="@font/notosans_medium"
         android:includeFontPadding="false"
-        android:layout_marginLeft="6dp"
-        android:layout_toRightOf="@+id/Timepeed_Friends_User_CIV"
-        android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
     </TextView>
-
+    </RelativeLayout>
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/Timepeed_Friends_Add_Btn"
         android:background="@drawable/ic_baseline_group_add_24"
