--- a/app/src/main/res/layout/user_list_item.xml
+++ b/app/src/main/res/layout/user_list_item.xml
@@ -53,6 +53,7 @@
             android:layout_centerInParent="true">
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/User_List_P2PChat_Civ"
+            android:visibility="gone"
             android:layout_centerInParent="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
